Working georeferencing between grids and projections.

--- a/test/gmuds_coords.ipynb
+++ b/test/gmuds_coords.ipynb
@@ -104,7 +104,7 @@
     "'{} {}'.format(*pyproj.transform(p_gmuds, p_latlon, WestLon, NorthLat)),\n",
     "'{} {}'.format(*pyproj.transform(p_gmuds, p_latlon, EastLon, NorthLat)),\n",
     "'{} {}'.format(*pyproj.transform(p_gmuds, p_latlon, EastLon, SouthLat)),\n",
-    "'{} {}'.format(*pyproj.transform(p_gmuds, p_latlon, WestLon, SouthLat))])\n"
+    "'{} {}'.format(*pyproj.transform(p_gmuds, p_latlon, WestLon, SouthLat))])"
    ]
   },
   {
@@ -157,7 +157,7 @@
     "print(pyproj.transform(p_gmuds, p_latlon, WestLon, NorthLat))\n",
     "print(pyproj.transform(p_gmuds, p_latlon, EastLon, NorthLat))\n",
     "print(pyproj.transform(p_gmuds, p_latlon, EastLon, SouthLat))\n",
-    "print(pyproj.transform(p_gmuds, p_latlon, WestLon, SouthLat))\n"
+    "print(pyproj.transform(p_gmuds, p_latlon, WestLon, SouthLat))"
    ]
   },
   {
@@ -179,9 +179,7 @@
    },
    "outputs": [],
    "source": [
-    "_bounds = (120000, 600000, 3000000, 3300000)\n",
-    "\n",
-    "\n"
+    "_bounds = (120000, 600000, 3000000, 3300000)"
    ]
   }
  ],
@@ -195,7 +193,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -206,5 +204,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
